issue with white space

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
+@media print {
+  @page {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  html, body {
+    border: 1px solid white;
+    height: 99%;
+    width: 100%;
+    page-break-after: avoid !important;
+    page-break-before: avoid !important;
+    padding: 0;
+    }
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
